src/objects/TS_Hierarchy_Derivation__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>TS_District__mdt</referenceTo>
        <relationshipLabel>TS Hierarchy Derivations</relationshipLabel>
        <relationshipName>TS_Hierarchy_Derivations</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>TS Hierarchy Derivation</label>
    <listViews>
        <fullName>All_DK_Post_Codes</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country_Code__c</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>DK</value>
        </filters>
        <label>All DK Post Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NL_Post_Codes</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country_Code__c</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>NL</value>
        </filters>
        <label>All NL Post Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NO_Post_Codes</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Postal_Code__c</columns>
        <columns>Country_Code__c</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code__c</field>
            <operation>equals</operation>
            <value>NO</value>
        </filters>
        <label>All NO Post Codes</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>TS Hierarchy Derivations</pluralLabel>
</CustomObject>